--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <div class="box"></div>
+    <div class="box">111111</div>
     <script>
         document.querySelector('.box').addEventListener('click', function () {
             alert('爱你')
